# EmailAssist

./: .gitignore  main.py  main_clean.py  main_dirty.py  prompts.py  pyproject.toml
GmailAPI/: gmail_api.py  labels.txt  output.html  output.txt
